Fix Bugs listed by Sonar Qube.